[gd_scene format=3 uid="uid://c2n2sjjatxuwj"]

[ext_resource type="Texture2D" uid="uid://del5jt8l2lkcd" path="res://graphics/title/title_letters.png" id="1_ammj3"]
[ext_resource type="Script" uid="uid://bcchnp4x6croy" path="res://scripts/title_layer.gd" id="1_nexvx"]
[ext_resource type="Shader" uid="uid://cstrmxslel2u7" path="res://shaders/flash_smooth.gdshader" id="2_po7b4"]
[ext_resource type="Shader" uid="uid://eb2ogex8mj3q" path="res://shaders/shine.gdshader" id="4_8tnrn"]
[ext_resource type="Texture2D" uid="uid://bdo6y3osxex0v" path="res://graphics/title/tail.png" id="4_h3kmk"]
[ext_resource type="Texture2D" uid="uid://b5k0a0t56hneq" path="res://graphics/title/gun.png" id="4_xkeei"]
[ext_resource type="Texture2D" uid="uid://bkmrxo7r8tv01" path="res://graphics/title/buttons/play_normal.png" id="7_tnt71"]
[ext_resource type="Texture2D" uid="uid://donjyfc7b0wwl" path="res://graphics/title/buttons/play_hover.png" id="8_qf2dj"]
[ext_resource type="FontFile" uid="uid://sgwyci3gbawn" path="res://fonts/fffforward.ttf" id="9_1inmv"]

[sub_resource type="Curve" id="Curve_8tnrn"]
_limits = [0.0, 49.0, 0.0, 2.0]
_data = [Vector2(0.060384445, 0.10064074), 0.0, 0.0, 0, 0, Vector2(0.100673445, 0.26842982), 0.0, 0.0, 0, 0, Vector2(0.11922245, 0.46713388), 0.0, 0.0, 0, 0, Vector2(0.13248545, 0.6879429), 0.0, 0.0, 0, 0, Vector2(0.13996744, 0.92122203), 0.0, 0.0, 0, 0, Vector2(0.14601645, 1.1645827), 0.0, 0.0, 0, 0, Vector2(0.15430667, 1.4217606), 0.0, 0.0, 0, 0, Vector2(0.15905067, 1.686845), 0.0, 0.0, 0, 0, Vector2(0.1659951, 1.9635035), 0.0, 0.0, 0, 0, Vector2(0.17123866, 2.2489011), 0.0, 0.0, 0, 0, Vector2(0.17654666, 2.5431457), 0.0, 0.0, 0, 0, Vector2(0.18181866, 2.8461766), 0.0, 0.0, 0, 0, Vector2(0.18667066, 3.1572945), 0.0, 0.0, 0, 0, Vector2(0.19222622, 3.4776714), 0.0, 0.0, 0, 0, Vector2(0.19790804, 3.8075182), 0.0, 0.0, 0, 0, Vector2(0.20369507, 4.14701), 0.0, 0.0, 0, 0, Vector2(0.20948212, 4.4961467), 0.0, 0.0, 0, 0, Vector2(0.21624923, 4.856562), 0.0, 0.0, 0, 0, Vector2(0.22305322, 5.2283177), 0.0, 0.0, 0, 0, Vector2(0.2290056, 5.6099935), 0.0, 0.0, 0, 0, Vector2(0.23495798, 6.0015903), 0.0, 0.0, 0, 0, Vector2(0.24091037, 6.4031076), 0.0, 0.0, 0, 0, Vector2(0.24686274, 6.814545), 0.0, 0.0, 0, 0, Vector2(0.25315323, 7.2364674), 0.0, 0.0, 0, 0, Vector2(0.26133823, 7.672031), 0.0, 0.0, 0, 0, Vector2(0.26937622, 8.120992), 0.0, 0.0, 0, 0, Vector2(0.27632123, 8.581527), 0.0, 0.0, 0, 0, Vector2(0.28251022, 9.052377), 0.0, 0.0, 0, 0, Vector2(0.2890492, 9.534125), 0.0, 0.0, 0, 0, Vector2(0.29672423, 10.0286665), 0.0, 0.0, 0, 0, Vector2(0.3033752, 10.5261345), 0.0, 0.0, 0, 0, Vector2(0.3105882, 11.018193), 0.0, 0.0, 0, 0, Vector2(0.31753266, 11.505044), 0.0, 0.0, 0, 0, Vector2(0.32470423, 11.986516), 0.0, 0.0, 0, 0, Vector2(0.33164868, 12.46278), 0.0, 0.0, 0, 0, Vector2(0.33859313, 12.933835), 0.0, 0.0, 0, 0, Vector2(0.34553754, 13.399681), 0.0, 0.0, 0, 0, Vector2(0.352482, 13.86032), 0.0, 0.0, 0, 0, Vector2(0.35942644, 14.31575), 0.0, 0.0, 0, 0, Vector2(0.3663709, 14.765972), 0.0, 0.0, 0, 0, Vector2(0.37331533, 15.210985), 0.0, 0.0, 0, 0, Vector2(0.38025978, 15.650791), 0.0, 0.0, 0, 0, Vector2(0.3875482, 16.085129), 0.0, 0.0, 0, 0, Vector2(0.39449266, 16.51426), 0.0, 0.0, 0, 0, Vector2(0.4014371, 16.938183), 0.0, 0.0, 0, 0, Vector2(0.40838155, 17.356895), 0.0, 0.0, 0, 0, Vector2(0.415326, 17.770401), 0.0, 0.0, 0, 0, Vector2(0.42227045, 18.1787), 0.0, 0.0, 0, 0, Vector2(0.4292149, 18.581787), 0.0, 0.0, 0, 0, Vector2(0.43615934, 18.979668), 0.0, 0.0, 0, 0, Vector2(0.4431038, 19.372341), 0.0, 0.0, 0, 0, Vector2(0.4500482, 19.759804), 0.0, 0.0, 0, 0, Vector2(0.45699266, 20.14206), 0.0, 0.0, 0, 0, Vector2(0.4639371, 20.519106), 0.0, 0.0, 0, 0, Vector2(0.47088155, 20.890945), 0.0, 0.0, 0, 0, Vector2(0.477826, 21.257576), 0.0, 0.0, 0, 0, Vector2(0.48477045, 21.618998), 0.0, 0.0, 0, 0, Vector2(0.4917149, 21.975212), 0.0, 0.0, 0, 0, Vector2(0.49865934, 22.326218), 0.0, 0.0, 0, 0, Vector2(0.5056038, 22.672014), 0.0, 0.0, 0, 0, Vector2(0.5125482, 23.012604), 0.0, 0.0, 0, 0, Vector2(0.5194927, 23.347984), 0.0, 0.0, 0, 0, Vector2(0.5264371, 23.678156), 0.0, 0.0, 0, 0, Vector2(0.5333816, 24.00312), 0.0, 0.0, 0, 0, Vector2(0.540326, 24.322876), 0.0, 0.0, 0, 0, Vector2(0.5472704, 24.637423), 0.0, 0.0, 0, 0, Vector2(0.5542149, 24.946762), 0.0, 0.0, 0, 0, Vector2(0.5611593, 25.250893), 0.0, 0.0, 0, 0, Vector2(0.5681038, 25.549814), 0.0, 0.0, 0, 0, Vector2(0.5750482, 25.843529), 0.0, 0.0, 0, 0, Vector2(0.5819927, 26.132034), 0.0, 0.0, 0, 0, Vector2(0.5889371, 26.41533), 0.0, 0.0, 0, 0, Vector2(0.5958816, 26.69342), 0.0, 0.0, 0, 0, Vector2(0.602826, 26.966301), 0.0, 0.0, 0, 0, Vector2(0.6097704, 27.233973), 0.0, 0.0, 0, 0, Vector2(0.6167149, 27.496435), 0.0, 0.0, 0, 0, Vector2(0.6236593, 27.75369), 0.0, 0.0, 0, 0, Vector2(0.6306038, 28.00574), 0.0, 0.0, 0, 0, Vector2(0.6375482, 28.252577), 0.0, 0.0, 0, 0, Vector2(0.6444927, 28.494207), 0.0, 0.0, 0, 0, Vector2(0.6514371, 28.73063), 0.0, 0.0, 0, 0, Vector2(0.6583816, 28.961843), 0.0, 0.0, 0, 0, Vector2(0.665326, 29.187849), 0.0, 0.0, 0, 0, Vector2(0.6722704, 29.408648), 0.0, 0.0, 0, 0, Vector2(0.6792149, 29.624235), 0.0, 0.0, 0, 0, Vector2(0.6861593, 29.834616), 0.0, 0.0, 0, 0, Vector2(0.6931038, 30.039787), 0.0, 0.0, 0, 0, Vector2(0.7000482, 30.239773), 0.0, 0.0, 0, 0, Vector2(0.7069927, 30.43744), 0.0, 0.0, 0, 0, Vector2(0.71401125, 30.63277), 0.0, 0.0, 0, 0, Vector2(0.7213102, 30.825668), 0.0, 0.0, 0, 0, Vector2(0.7282547, 31.016249), 0.0, 0.0, 0, 0, Vector2(0.7351991, 31.204515), 0.0, 0.0, 0, 0, Vector2(0.7421436, 31.390469), 0.0, 0.0, 0, 0, Vector2(0.749088, 31.574106), 0.0, 0.0, 0, 0, Vector2(0.75603247, 31.755428), 0.0, 0.0, 0, 0, Vector2(0.7629769, 31.934437), 0.0, 0.0, 0, 0, Vector2(0.76992136, 32.11113), 0.0, 0.0, 0, 0, Vector2(0.7768658, 32.285507), 0.0, 0.0, 0, 0, Vector2(0.7838102, 32.45757), 0.0, 0.0, 0, 0, Vector2(0.7907547, 32.62732), 0.0, 0.0, 0, 0, Vector2(0.7976991, 32.794754), 0.0, 0.0, 0, 0, Vector2(0.8046436, 32.95987), 0.0, 0.0, 0, 0, Vector2(0.811588, 33.122677), 0.0, 0.0, 0, 0, Vector2(0.81853247, 33.283165), 0.0, 0.0, 0, 0, Vector2(0.8254769, 33.441338), 0.0, 0.0, 0, 0, Vector2(0.83242136, 33.5972), 0.0, 0.0, 0, 0, Vector2(0.8393658, 33.750744), 0.0, 0.0, 0, 0, Vector2(0.8463102, 33.901974), 0.0, 0.0, 0, 0, Vector2(0.8532547, 34.050888), 0.0, 0.0, 0, 0, Vector2(0.8601991, 34.197487), 0.0, 0.0, 0, 0, Vector2(0.8671436, 34.341774), 0.0, 0.0, 0, 0, Vector2(0.874088, 34.483746), 0.0, 0.0, 0, 0, Vector2(0.88103247, 34.6234), 0.0, 0.0, 0, 0, Vector2(0.8879769, 34.760742), 0.0, 0.0, 0, 0, Vector2(0.89492136, 34.895767), 0.0, 0.0, 0, 0, Vector2(0.9018658, 35.02848), 0.0, 0.0, 0, 0, Vector2(0.9088102, 35.158875), 0.0, 0.0, 0, 0, Vector2(0.9157547, 35.286957), 0.0, 0.0, 0, 0, Vector2(0.9226991, 35.412724), 0.0, 0.0, 0, 0, Vector2(0.9296436, 35.536175), 0.0, 0.0, 0, 0, Vector2(0.9364364, 35.657364), 0.0, 0.0, 0, 0, Vector2(0.9433809, 35.776237), 0.0, 0.0, 0, 0, Vector2(0.9503253, 35.892796), 0.0, 0.0, 0, 0, Vector2(0.9572698, 36.00704), 0.0, 0.0, 0, 0, Vector2(0.9642142, 36.11897), 0.0, 0.0, 0, 0, Vector2(0.9711587, 36.22858), 0.0, 0.0, 0, 0, Vector2(0.9781031, 36.33588), 0.0, 0.0, 0, 0, Vector2(0.9850476, 36.440865), 0.0, 0.0, 0, 0, Vector2(0.991992, 36.543533), 0.0, 0.0, 0, 0, Vector2(0.9989364, 36.643887), 0.0, 0.0, 0, 0, Vector2(1.0058808, 36.74389), 0.0, 0.0, 0, 0, Vector2(1.0128254, 36.843887), 0.0, 0.0, 0, 0, Vector2(1.0197698, 36.94389), 0.0, 0.0, 0, 0, Vector2(1.0267142, 37.043888), 0.0, 0.0, 0, 0, Vector2(1.0336586, 37.143887), 0.0, 0.0, 0, 0, Vector2(1.0406032, 37.24389), 0.0, 0.0, 0, 0, Vector2(1.0475476, 37.343887), 0.0, 0.0, 0, 0, Vector2(1.054492, 37.44389), 0.0, 0.0, 0, 0, Vector2(1.0614364, 37.543888), 0.0, 0.0, 0, 0, Vector2(1.0683808, 37.643887), 0.0, 0.0, 0, 0, Vector2(1.0753254, 37.74389), 0.0, 0.0, 0, 0, Vector2(1.0822698, 37.843887), 0.0, 0.0, 0, 0, Vector2(1.0892142, 37.94389), 0.0, 0.0, 0, 0, Vector2(1.0961586, 38.043888), 0.0, 0.0, 0, 0, Vector2(1.1031032, 38.143887), 0.0, 0.0, 0, 0, Vector2(1.1100476, 38.24389), 0.0, 0.0, 0, 0, Vector2(1.116992, 38.343887), 0.0, 0.0, 0, 0, Vector2(1.1239364, 38.44389), 0.0, 0.0, 0, 0, Vector2(1.1308808, 38.543888), 0.0, 0.0, 0, 0, Vector2(1.1378254, 38.643887), 0.0, 0.0, 0, 0, Vector2(1.1447698, 38.74389), 0.0, 0.0, 0, 0, Vector2(1.1517142, 38.843887), 0.0, 0.0, 0, 0, Vector2(1.1586586, 38.94389), 0.0, 0.0, 0, 0, Vector2(1.1656032, 39.043888), 0.0, 0.0, 0, 0, Vector2(1.1725476, 39.143887), 0.0, 0.0, 0, 0, Vector2(1.179492, 39.24389), 0.0, 0.0, 0, 0, Vector2(1.1864364, 39.343887), 0.0, 0.0, 0, 0, Vector2(1.1933808, 39.44389), 0.0, 0.0, 0, 0, Vector2(1.2003254, 39.543888), 0.0, 0.0, 0, 0, Vector2(1.2072698, 39.643887), 0.0, 0.0, 0, 0, Vector2(1.2142142, 39.74389), 0.0, 0.0, 0, 0, Vector2(1.2211586, 39.843887), 0.0, 0.0, 0, 0, Vector2(1.2281032, 39.94389), 0.0, 0.0, 0, 0, Vector2(1.2350476, 40.043888), 0.0, 0.0, 0, 0, Vector2(1.241992, 40.143887), 0.0, 0.0, 0, 0, Vector2(1.2489364, 40.24389), 0.0, 0.0, 0, 0, Vector2(1.2558808, 40.343887), 0.0, 0.0, 0, 0, Vector2(1.2628254, 40.44389), 0.0, 0.0, 0, 0, Vector2(1.2697698, 40.543888), 0.0, 0.0, 0, 0, Vector2(1.2767142, 40.643887), 0.0, 0.0, 0, 0, Vector2(1.2836586, 40.74389), 0.0, 0.0, 0, 0, Vector2(1.2906032, 40.843887), 0.0, 0.0, 0, 0, Vector2(1.2975476, 40.94389), 0.0, 0.0, 0, 0, Vector2(1.304492, 41.043888), 0.0, 0.0, 0, 0, Vector2(1.3114364, 41.143887), 0.0, 0.0, 0, 0, Vector2(1.3183808, 41.24389), 0.0, 0.0, 0, 0, Vector2(1.3253254, 41.343887), 0.0, 0.0, 0, 0, Vector2(1.3322698, 41.44389), 0.0, 0.0, 0, 0, Vector2(1.3392142, 41.543888), 0.0, 0.0, 0, 0, Vector2(1.3461586, 41.643887), 0.0, 0.0, 0, 0, Vector2(1.3531032, 41.74389), 0.0, 0.0, 0, 0, Vector2(1.3600476, 41.843887), 0.0, 0.0, 0, 0, Vector2(1.366992, 41.94389), 0.0, 0.0, 0, 0, Vector2(1.3739364, 42.043888), 0.0, 0.0, 0, 0, Vector2(1.3808808, 42.143887), 0.0, 0.0, 0, 0, Vector2(1.3878254, 42.24389), 0.0, 0.0, 0, 0, Vector2(1.3943034, 42.343887), 0.0, 0.0, 0, 0, Vector2(1.4012479, 42.44389), 0.0, 0.0, 0, 0, Vector2(1.4081923, 42.543888), 0.0, 0.0, 0, 0, Vector2(1.4151368, 42.643887), 0.0, 0.0, 0, 0, Vector2(1.4220812, 42.74389), 0.0, 0.0, 0, 0, Vector2(1.4290257, 42.843887), 0.0, 0.0, 0, 0, Vector2(1.4359701, 42.94389), 0.0, 0.0, 0, 0, Vector2(1.4429146, 43.043888), 0.0, 0.0, 0, 0, Vector2(1.449859, 43.143887), 0.0, 0.0, 0, 0, Vector2(1.4568034, 43.24389), 0.0, 0.0, 0, 0, Vector2(1.4637479, 43.343887), 0.0, 0.0, 0, 0, Vector2(1.4706923, 43.44389), 0.0, 0.0, 0, 0, Vector2(1.4776368, 43.543888), 0.0, 0.0, 0, 0, Vector2(1.4845812, 43.643887), 0.0, 0.0, 0, 0, Vector2(1.4915257, 43.74389), 0.0, 0.0, 0, 0, Vector2(1.4984701, 43.843887), 0.0, 0.0, 0, 0, Vector2(1.5054146, 43.94389), 0.0, 0.0, 0, 0, Vector2(1.512359, 44.043888), 0.0, 0.0, 0, 0, Vector2(1.5193034, 44.143887), 0.0, 0.0, 0, 0, Vector2(1.5262479, 44.24389), 0.0, 0.0, 0, 0, Vector2(1.5331923, 44.343887), 0.0, 0.0, 0, 0, Vector2(1.5401368, 44.44389), 0.0, 0.0, 0, 0, Vector2(1.5470812, 44.543888), 0.0, 0.0, 0, 0, Vector2(1.5540257, 44.643887), 0.0, 0.0, 0, 0, Vector2(1.5609701, 44.74389), 0.0, 0.0, 0, 0, Vector2(1.5679146, 44.843887), 0.0, 0.0, 0, 0, Vector2(1.574859, 44.94389), 0.0, 0.0, 0, 0, Vector2(1.5818034, 45.043888), 0.0, 0.0, 0, 0, Vector2(1.5887479, 45.143887), 0.0, 0.0, 0, 0, Vector2(1.5956923, 45.24389), 0.0, 0.0, 0, 0, Vector2(1.6026368, 45.343887), 0.0, 0.0, 0, 0, Vector2(1.6095812, 45.44389), 0.0, 0.0, 0, 0, Vector2(1.6165257, 45.543888), 0.0, 0.0, 0, 0, Vector2(1.6234701, 45.643887), 0.0, 0.0, 0, 0, Vector2(1.6304146, 45.74389), 0.0, 0.0, 0, 0, Vector2(1.637359, 45.843887), 0.0, 0.0, 0, 0, Vector2(1.6443034, 45.94389), 0.0, 0.0, 0, 0, Vector2(1.6512479, 46.043888), 0.0, 0.0, 0, 0, Vector2(1.6581923, 46.143887), 0.0, 0.0, 0, 0, Vector2(1.6651368, 46.24389), 0.0, 0.0, 0, 0, Vector2(1.6720812, 46.343887), 0.0, 0.0, 0, 0, Vector2(1.6790257, 46.44389), 0.0, 0.0, 0, 0, Vector2(1.6859893, 46.543888), 0.0, 0.0, 0, 0, Vector2(1.6929337, 46.643887), 0.0, 0.0, 0, 0, Vector2(1.6998781, 46.74389), 0.0, 0.0, 0, 0, Vector2(1.7068225, 46.843887), 0.0, 0.0, 0, 0, Vector2(1.713767, 46.94389), 0.0, 0.0, 0, 0, Vector2(1.7207115, 47.043888), 0.0, 0.0, 0, 0, Vector2(1.7276559, 47.143887), 0.0, 0.0, 0, 0, Vector2(1.7346003, 47.24389), 0.0, 0.0, 0, 0, Vector2(1.7415447, 47.343887), 0.0, 0.0, 0, 0, Vector2(1.7484893, 47.44389), 0.0, 0.0, 0, 0, Vector2(1.7554337, 47.543888), 0.0, 0.0, 0, 0, Vector2(1.7623781, 47.643887), 0.0, 0.0, 0, 0, Vector2(1.7693225, 47.74389), 0.0, 0.0, 0, 0, Vector2(1.776267, 47.843887), 0.0, 0.0, 0, 0, Vector2(1.7832115, 47.94389), 0.0, 0.0, 0, 0, Vector2(1.7901559, 48.043888), 0.0, 0.0, 0, 0, Vector2(1.7971003, 48.143887), 0.0, 0.0, 0, 0, Vector2(1.8040932, 48.24389), 0.0, 0.0, 0, 0, Vector2(1.8110377, 48.343887), 0.0, 0.0, 0, 0, Vector2(1.8179821, 48.44389), 0.0, 0.0, 0, 0, Vector2(1.8249266, 48.543888), 0.0, 0.0, 0, 0, Vector2(1.831871, 48.643887), 0.0, 0.0, 0, 0, Vector2(1.8388155, 48.74389), 0.0, 0.0, 0, 0, Vector2(1.8457599, 48.843887), 0.0, 0.0, 0, 0, Vector2(1.8527043, 48.94389), 0.0, 0.0, 0, 0, Vector2(1.8596488, 49), 0.0, 0.0, 0, 0]
point_count = 255

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3kmk"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_po7b4"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xkeei"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8tnrn"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tnt71"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qf2dj"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sqnma"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1inmv"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ra5a"]
shader = ExtResource("2_po7b4")
shader_parameter/value = 0.0
shader_parameter/color = Color(1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_8tnrn"]
offsets = PackedFloat32Array(0, 0.15254237, 0.33898306, 0.60169494, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tnt71"]
gradient = SubResource("Gradient_8tnrn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypotn"]
shader = ExtResource("4_8tnrn")
shader_parameter/main_color = SubResource("GradientTexture1D_tnt71")
shader_parameter/shine_progress = 0.0
shader_parameter/shine_size = 0.1
shader_parameter/shine_angle = 45.0

[sub_resource type="ViewportTexture" id="ViewportTexture_nexvx"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Theme" id="Theme_sqnma"]
default_font = ExtResource("9_1inmv")
default_font_size = 32

[node name="TitleLayer" type="CanvasLayer" unique_id=1948925533]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)
script = ExtResource("1_nexvx")
tail_frame_curve = SubResource("Curve_8tnrn")

[node name="SubViewport" type="SubViewport" parent="." unique_id=1597891069]
transparent_bg = true
canvas_item_default_texture_filter = 0
size = Vector2i(300, 110)

[node name="Letters" type="HBoxContainer" parent="SubViewport" unique_id=1306245078]
offset_top = 25.0
offset_right = 328.0
offset_bottom = 72.0

[node name="Letter1" type="Control" parent="SubViewport/Letters" unique_id=535848343]
custom_minimum_size = Vector2(30, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter1" unique_id=1376623353]
material = SubResource("ShaderMaterial_h3kmk")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7

[node name="Letter2" type="Control" parent="SubViewport/Letters" unique_id=760072663]
custom_minimum_size = Vector2(25, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter2" unique_id=848748436]
material = SubResource("ShaderMaterial_po7b4")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 1

[node name="Letter3" type="Control" parent="SubViewport/Letters" unique_id=1637819876]
custom_minimum_size = Vector2(84, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter3" unique_id=1256240968]
material = SubResource("ShaderMaterial_xkeei")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 2

[node name="Letter4" type="Control" parent="SubViewport/Letters" unique_id=118879927]
custom_minimum_size = Vector2(24, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter4" unique_id=1671107909]
material = SubResource("ShaderMaterial_8tnrn")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 3

[node name="Letter5" type="Control" parent="SubViewport/Letters" unique_id=368495121]
custom_minimum_size = Vector2(30, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter5" unique_id=2071423115]
material = SubResource("ShaderMaterial_tnt71")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 4

[node name="Letter6" type="Control" parent="SubViewport/Letters" unique_id=855930669]
custom_minimum_size = Vector2(24, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter6" unique_id=554362980]
material = SubResource("ShaderMaterial_qf2dj")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 5

[node name="Letter7" type="Control" parent="SubViewport/Letters" unique_id=1553649329]
custom_minimum_size = Vector2(22, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter7" unique_id=2121345498]
material = SubResource("ShaderMaterial_sqnma")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7
frame = 6

[node name="Letter8" type="Control" parent="SubViewport/Letters" unique_id=59813499]
material = SubResource("ShaderMaterial_1inmv")
custom_minimum_size = Vector2(30, 47)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/Letters/Letter8" unique_id=2039375536]
material = SubResource("ShaderMaterial_0ra5a")
texture = ExtResource("1_ammj3")
centered = false
hframes = 7

[node name="GunSprite" type="Sprite2D" parent="SubViewport" unique_id=1440658924]
material = SubResource("ShaderMaterial_ypotn")
position = Vector2(146, 56)
texture = ExtResource("4_xkeei")

[node name="TailSprite" type="Sprite2D" parent="SubViewport" unique_id=1109919519]
position = Vector2(113, 58)
texture = ExtResource("4_h3kmk")
hframes = 50
frame = 40

[node name="ColorRect" type="ColorRect" parent="." unique_id=1038641253]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShadowRect" type="TextureRect" parent="." unique_id=55090123]
self_modulate = Color(0, 0, 0, 0.35000002)
offset_right = 300.0
offset_bottom = 110.0
texture = SubResource("ViewportTexture_nexvx")
stretch_mode = 2
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="." unique_id=2118793398]
offset_right = 300.0
offset_bottom = 110.0
texture = SubResource("ViewportTexture_nexvx")
stretch_mode = 2
metadata/_edit_lock_ = true

[node name="ButtonContainer" type="VBoxContainer" parent="." unique_id=727756161]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="TextureButton" parent="ButtonContainer" unique_id=328573696]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_tnt71")
texture_hover = ExtResource("8_qf2dj")

[node name="ShadowSprite" type="Sprite2D" parent="ButtonContainer/PlayButton" unique_id=1635627007]
self_modulate = Color(0, 0, 0, 0.35000002)
z_index = -1
texture = ExtResource("7_tnt71")
centered = false
offset = Vector2(4, 3)

[node name="VersionLabel" type="Label" parent="." unique_id=229788767]
z_index = -1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 51.0
grow_vertical = 0
scale = Vector2(0.333, 0.333)
theme = SubResource("Theme_sqnma")
theme_override_colors/font_color = Color(0.7764706, 0.6313726, 0.39215687, 1)
text = "version: -"
